--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -37,7 +37,7 @@ figcaption,
   text-decoration: none;
   border: none;
   font-weight: normal;
-  font-family: "Microsoft Yahei";
+  font-family: "PingFang SC";
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
   -webkit-font-smoothing: antialiased;
