--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -185,7 +185,7 @@ body,
 }
 
 .select-default-icon {
-  display: table;
+  // display: table;
   width: 20px;
   height: 20px;
   background: url('~jd/images/check0.png') no-repeat;
