--- a/src/assets/common/css/mixin.scss
+++ b/src/assets/common/css/mixin.scss
@@ -8,6 +8,7 @@ $gray: #81838e;
 $border: #e1e1e1;
 $padding: 10px;
 $fontfamily: 'Microsoft Yahei';
+$bg:#f2f2f2;
 //flex box
 @mixin flexbox($jc:space-between, $ai:center, $fd:row, $fw:nowrap) {
   display: flex;
