--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -50,8 +50,9 @@ figcaption
 img[lazy] {
  
   margin: auto;
-  background: url('~jd/images/jdload.gif') center no-repeat;
-  background-size: 60%
+  // background: url('/src/assets/common/images/404.png') center no-repeat;
+  background: #e5e5e5;
+  // background-size: 100%
 }
 body{
   background: #f2f2f2;
@@ -96,6 +97,19 @@ input[type="submit"],
 input[type="search"],
 input[type="reset"] {
   -webkit-appearance: none;
+}
+
+input{
+  outline-color: invert ;
+outline-style: none ;
+outline-width: 0px ;
+border: none ;
+border-style: none ;
+text-shadow: none ;
+-webkit-appearance: none ;
+-webkit-user-select: text ;
+outline-color: transparent ;
+box-shadow: none;
 }
 
 textarea {
