--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -61,7 +61,7 @@ em{
   font-style: normal
 }
 .layer-4{
-  display:none;
+  display:none!important;
 }
 #YSF-IFRAME-LAYER.ysf-chat-mobile-layeropen{
   height:100%!important;
