--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -66,6 +66,9 @@ em{
 #YSF-IFRAME-LAYER.ysf-chat-mobile-layeropen{
   height:100%!important;
 }
+.g-body .body_hd{
+  background-color:#ff5527;
+}
 /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
 
 ::-webkit-scrollbar {
