--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -54,6 +54,28 @@ img[lazy] {
   background: #e5e5e5;
   // background-size: 100%
 }
+.imgcode {
+  width: 70px;
+    height: 27px;
+    border: 1px solid #e4e4e4;
+    vertical-align: bottom;
+    font-size: 14px;
+    color: #666;
+    padding-left: 10px;
+}
+.changeImg {
+  width:70px;
+  height:27px;
+  border:1px solid #333;
+  color:#333;
+  margin-left: 6px;
+  display: inline-block;
+  line-height: 27px;
+  text-align: center;
+  border-radius: 6px;
+  font-size: 14px;
+  vertical-align: bottom;
+}
 body{
   background: #f2f2f2;
 }
