--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -403,3 +403,9 @@ img[lazy=loaded] {
   opacity: 1;
   visibility: visible;
 }
+.mint-swipe-items-wrap{
+  div{
+    background: #fff;
+    text-align: center
+  }
+}
