--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -395,12 +395,13 @@ img[lazy]{
 }
 img[lazy=loading] {
   opacity: 0;
-  background: #f5f5f5;
+  background: #fff;
   visibility: hidden;
   margin: auto;
 }
 img[lazy=loaded] {
   opacity: 1;
+  background: #fff;
   visibility: visible;
 }
 .mint-swipe-items-wrap{
