--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -386,6 +386,19 @@ body,
 .mint-msgbox{
   width: 60%;
 }
+.disabled-btnspan{
+  color: #999!important;
+  pointer-events: none;
+  cursor: default;
+}
+
+
+.disabled-btnapply{
+  color: #fff!important;
+  background: #999!important;
+  pointer-events: none;
+  cursor: default;
+}
 
 //图片懒加载展位图
 img[lazy]{
