--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -242,23 +242,23 @@ body,
 
 .select-default-icon {
   // display: table;
-  width: 20px;
-  height: 20px;
+  width: .533333rem;
+  height: .533333rem;
   background: url('~jd/images/check2.png') no-repeat;
   background-size: 100% 100%;
 }
 
 .select-defaultnone-icon {
-  width: 20px;
-  height: 20px;
+  width: .533333rem;
+  height: .533333rem;
   background: url('~jd/images/check3.png') no-repeat;
   background-size: 100% 100%;
   pointer-events: none;
   cursor: default;
 }
 .select-defaultnone-cheicon{
-  width: 20px;
-  height: 20px;
+  width: .533333rem;
+  height: .533333rem;
   background: url('~jd/images/check3.png') no-repeat;
   background-size: 100% 100%;
   pointer-events: none;
@@ -387,7 +387,7 @@ body,
   color: $red
 }
 .mint-msgbox{
-  width: 60%;
+  width: 70%;
 }
 .disabled-btnspan{
   color: #999!important;
