--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -248,6 +248,19 @@ body,
   background-size: 100% 100%;
 }
 
+.selectclassify-default-icon {
+  width: .533333rem;
+  height: .533333rem;
+  background: url('~jd/images/selectclassify1.png') no-repeat;
+  background-size: 100% 100%;
+}
+.selectclassify-icon {
+  width: .533333rem;
+  height: .533333rem;
+  background: url('~jd/images/selectclassify2.png') no-repeat;
+  background-size: 100% 100%;
+}
+
 .select-defaultnone-icon {
   width: .533333rem;
   height: .533333rem;
