--- a/src/assets/common/css/theme.scss
+++ b/src/assets/common/css/theme.scss
@@ -260,6 +260,12 @@ body,
   background: url('~jd/images/selectclassify2.png') no-repeat;
   background-size: 100% 100%;
 }
+.select-defaultdel-icon{
+  width: .533333rem;
+  height: .533333rem;
+  background: url('~jd/images/classifyclose.png') no-repeat;
+  background-size: 100% 100%;
+}
 
 .select-defaultnone-icon {
   width: .533333rem;
